src/public/css/style.css
* {
  font-family: 'Poppins', sans-serif;
}

#navbar {
  background-color: #b75d69;
}

.navbar-toggler {
  border: none;
  margin-left: auto;
}

#navbarLogo {
  position: absolute;
  top: 1.5rem;
  left: 4rem;
  width: 11rem;
  z-index: 100;
}

@media(max-width: 1300px) {
  #navbarLogo {
    top: 1.5rem;
    left: 4rem;
    width: 7rem;
  }
}

@media(max-width: 900px) {
  #navbarLogo {
    top: 1.5rem;
    left: 3rem;
    width: 5rem;
  }
}

@media(max-width: 450px) {
  #navbarLogo {
    top: 1rem;
    left: 2rem;
    width: 5rem;
  }
}

#navbarLip {
  position: relative;
  top: -2px;
  left: -2px;
  width: 100%;
}

#navbarSupportedContent ul {
  margin-left: auto;
  text-align: right;
}

#section1 {
  background-image: url(/img/section1-background.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-box-shadow: inset 0px 300px 200px -200px #000000;
  -moz-box-shadow: inset 0px 300px 200px -200px #000000;
  box-shadow: inset 0px 300px 200px -200px #000000;

  height: 110vh;
}

#jumbotronContent {
  margin-top: -2rem;
}

@media(max-width: 800px) {
  #jumbotronContent {
    margin-top: 0;
  }
}

#jumbotronContent * {
  text-align: center;
  color: #ffffff;
}

#jumbotronContent h3 {
  font-weight: 300;
  font-size: 1.5rem;
}

#jumbotronContent h1 {
  font-weight: 900;
  font-size: 3rem;
}

#section2 {
  background-color: #B75D69;
  color: #FFFFFF;
  min-height: 95vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#section2 .text {
  padding-top: 10rem;
  padding-bottom: 10rem;
}

#section2 h2 {
  font-weight: 900;
}

#section2 #featherImage {
  position: absolute;
  top: -10vh;
  right: 10rem;
  float: right;
  height: 110vh;
  z-index: 100;
}

@media(max-width: 1199px) {
  #section2 .text {
    padding-bottom: 6rem;
  }

  #section2 #featherImage {
    right: 5rem;
  }
}

#section2WaveBottom {
  position: relative;
  top: 2px;
  left: 2px;
}

#section3 {
  background-color: #eacdc2;
}

#section3 .col {
  padding-top: 8rem;
  padding-bottom: 10rem;
}

#section3 h2 {
  font-weight: 900;
}

#events {
  background-image: linear-gradient(to bottom, #f5f6fc50, #f5f6fc85), url(/img/events-background.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 120vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#events .text {
  color: #000000;
  text-align: center;
  padding-top: 5rem;
}

#events .text h2 {
  font-weight: 900;
}

#businessesHeader {
  background-image: url(/img/businesses-wave-top.svg);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 2rem;
  color: #ffffff;
}

#businessesHeader h2 {
  float: right;
  font-weight: 900;
}

#businesses {
  background-color: #b75d69;
  color: #ffffff;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#businesses .container {
  padding-top: 3rem;
  padding-bottom: 2rem;
}

.business-thumbnail {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.business-thumbnail:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

#businessInfoModal .modal-content {
  color: #333333;
  background-color: transparent;
}

#businessInfoModal .modal-header {
  border: none;
  background-color: #F0CCC0;
  border-top-left-radius: 0.8rem;
  border-top-right-radius: 0.8rem;
  padding-left: 2rem;
  padding-top: 2rem;
  padding-right: 2rem;
}

#businessInfoModal .modal-title {
  font-weight: 900;
  padding-left: 15px;
}

#businessInfoModal .modal-body {
  background-color: #F0CCC0;
  padding-left: 2rem;
  padding-right: 2rem;
}

#businessInfoModal .modal-body h5 {
  font-weight: 900;
  font-size: 1rem;
}

#businessInfoModal .wave-bottom {
  background-color: #C45667;
}

#businessInfoModal .modal-footer {
  background-color: #C45667;
  border: none;
  border-bottom-left-radius: 0.8rem;
  border-bottom-right-radius: 0.8rem;
}

#businessInfoModal .modal-footer a {
  padding: 1rem 0.7rem;
}

#businessInfoModal .modal-footer a:first-child {
  padding-left: 1.5rem;
}

#businessInfoModal .modal-footer a img {
  width: 1.5rem;
}

#businessesWaveBottom {
  position: relative;
  top: 2px;
  left: 2px;
}

#contact {
  background-color: #774c60;
  padding: 1rem 3rem 2rem 3rem;
  display: grid;
  grid-template-areas: "a b c";
}

#contact #socialIcons {
  grid-area: a;
  align-self: end;
}

#contact #socialIcons img {
  width: 2rem;
  margin-top: 1rem;
  margin-right: 1rem;
}

#contact #contactInfo {
  grid-area: b;
  align-self: end;
  justify-self: center;
  color: #ffffff;
  text-align: center;
}

#contact #contactInfo a {
  color: #ffffff;
}

#contact #isekLogoText {
  grid-area: c;
  justify-self: end;
}

#contact #isekLogoText img {
  width: 15rem;
}

